<resources>
    <string name="app_name">HuertApp</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo Electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="contraseña">Contraseña</string>
    <string name="repContraseña">Repita Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="respuesta">Nombre: %s \nCorreo: %s \nCiudad de nacimiento: %s</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero">Género</string>
    <string name="pasatiempos">Pasatiempos</string>
    <string name="nadar">Nadar</string>
    <string name="cine">Cine</string>
    <string name="comer">Comer</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="iniciarsesion">Iniciar sesión</string>
    <string name="errorCamposVacios">Algunos campos están vacios</string>
    <string name="ubicacion">Ubicacion</string>

    <string-array name="ciudadUbicacion">
        <item>Seleccione una vereda</item>
        <item>Chuguldí</item>
        <item>Motilón</item>
        <item>El Salado</item>
        <item>Bolivar</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="clases">Clases</string>
    <string name="bprp">Biblioteca para la Paz</string>
    <string name="biblioisais">Biblio ISAIS</string>
    <string name="bibliomundo">Biblio Mundo</string>
</resources>