<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/ic_verduras"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/correo_edit_text_layout_login_aux"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/correo_edit_text_login_aux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="6dp"
            android:hint="@string/correo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contrasena_edit_text_layout_login_aux"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contrasena_edit_text_login_aux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="6dp"
            android:hint="@string/contraseña" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:text="@string/olvidaste_tu_contrasena"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <Button
        android:id="@+id/iniciarSesionButton_aux"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/botton_rounded"
        android:text="@string/iniciarsesion"
        android:textSize="18sp" />

    <Button
        android:id="@+id/registrarButton_aux"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_botton_top"
        android:text="@string/registrar"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="--------------------  ó  --------------------"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/registrarGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/ic_google"
        android:text="Google"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</LinearLayout>






